tests/ui/explore-issue-38412.stderr
error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:19:63
   |
LL |     let Record { a_stable_pub: _, a_unstable_declared_pub: _, a_unstable_undeclared_pub: _, .. } =
   |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:28:5
   |
LL |     r.a_unstable_undeclared_pub;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0616]: field `b_crate` of struct `Record` is private
  --> $DIR/explore-issue-38412.rs:29:7
   |
LL |     r.b_crate;
   |       ^^^^^^^ private field

error[E0616]: field `c_mod` of struct `Record` is private
  --> $DIR/explore-issue-38412.rs:30:7
   |
LL |     r.c_mod;
   |       ^^^^^ private field

error[E0616]: field `d_priv` of struct `Record` is private
  --> $DIR/explore-issue-38412.rs:31:7
   |
LL |     r.d_priv;
   |       ^^^^^^ private field

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:35:5
   |
LL |     t.2;
   |     ^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0616]: field `3` of struct `pub_and_stability::Tuple` is private
  --> $DIR/explore-issue-38412.rs:36:7
   |
LL |     t.3;
   |       ^ private field

error[E0616]: field `4` of struct `pub_and_stability::Tuple` is private
  --> $DIR/explore-issue-38412.rs:37:7
   |
LL |     t.4;
   |       ^ private field

error[E0616]: field `5` of struct `pub_and_stability::Tuple` is private
  --> $DIR/explore-issue-38412.rs:38:7
   |
LL |     t.5;
   |       ^ private field

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:42:7
   |
LL |     r.unstable_undeclared_trait_method();
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:46:7
   |
LL |     r.unstable_undeclared();
   |       ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0624]: method `pub_crate` is private
  --> $DIR/explore-issue-38412.rs:48:7
   |
LL |     r.pub_crate();
   |       ^^^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:114:9
   |
LL |         pub(crate) fn pub_crate(&self) -> i32 { self.d_priv }
   |         ------------------------------------- private method defined here

error[E0624]: method `pub_mod` is private
  --> $DIR/explore-issue-38412.rs:49:7
   |
LL |     r.pub_mod();
   |       ^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:116:9
   |
LL |         pub(in m) fn pub_mod(&self) -> i32 { self.d_priv }
   |         ---------------------------------- private method defined here

error[E0624]: method `private` is private
  --> $DIR/explore-issue-38412.rs:50:7
   |
LL |     r.private();
   |       ^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:118:9
   |
LL |         fn private(&self) -> i32 { self.d_priv }
   |         ------------------------ private method defined here

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:55:7
   |
LL |     t.unstable_undeclared_trait_method();
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_undeclared'
  --> $DIR/explore-issue-38412.rs:59:7
   |
LL |     t.unstable_undeclared();
   |       ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #38412 <https://github.com/rust-lang/rust/issues/38412> for more information
   = help: add `#![feature(unstable_undeclared)]` to the crate attributes to enable

error[E0624]: method `pub_crate` is private
  --> $DIR/explore-issue-38412.rs:61:7
   |
LL |     t.pub_crate();
   |       ^^^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:129:9
   |
LL |         pub(crate) fn pub_crate(&self) -> i32 { self.0 }
   |         ------------------------------------- private method defined here

error[E0624]: method `pub_mod` is private
  --> $DIR/explore-issue-38412.rs:62:7
   |
LL |     t.pub_mod();
   |       ^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:130:9
   |
LL |         pub(in m) fn pub_mod(&self) -> i32 { self.0 }
   |         ---------------------------------- private method defined here

error[E0624]: method `private` is private
  --> $DIR/explore-issue-38412.rs:63:7
   |
LL |     t.private();
   |       ^^^^^^^ private method
   |
  ::: $DIR/auxiliary/pub-and-stability.rs:131:9
   |
LL |         fn private(&self) -> i32 { self.0 }
   |         ------------------------ private method defined here

error: aborting due to 19 previous errors

Some errors have detailed explanations: E0616, E0624, E0658.
For more information about an error, try `rustc --explain E0616`.
